--- a/index.html
+++ b/index.html
@@ -15,23 +15,21 @@
     <div id="main">
         <div id="header">
             <!-- Begin: Nav -->
-            <ul id="nav">
-                <li><a href="#">Home</a></li>
-                <li><a href="#band">Band</a></li>
-                <li><a href="#tour">Tour</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li>
-                    <a href="">
-                        More
-                        <i class="down-icon ti-angle-down"></i>
-                    </a>
-                    <ul class="subnav">
-                        <li><a href="#">Merchandise</a></li>
-                        <li><a href="#">Extras</a></li>
-                        <li><a href="#">Media</a></li>
-                    </ul>
-                </li>
-            </ul>
+            <div id="nav">
+                <a href="#">Home</a>
+                <a href="#band">Band</a>
+                <a href="#tour">Tour</a>
+                <a href="#contact">Contact</a>
+                <div class="more-btn">
+                    More
+                    <i class="down-icon ti-angle-down"></i>
+                    <div class="subnav">
+                        <a href="#">Merchandise</a>
+                        <a href="#">Extras</a>
+                        <a href="#">Media</a>
+                    </div>
+                </div>
+            </div>
             <!-- End: Nav -->
             <!-- Begin: Search -->
             <div class="search-btn">
